[tool.poetry]
name = "machine-learning"
version = "0.1.0"
description = ""
authors = ["Vytenis Dambrauskas <vytenisdambrauskas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.4.0"
yfinance = "^0.2.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
